test/negative/struct_self_ref.mut
# ERROR: self-referential struct — infinite size
struct Node
    val: i64
    next: Node
end
